fixing distribuidores button on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -817,6 +817,10 @@ body form {
 		padding: 10px;
 	}
 
+	#button-tienda-light {
+		padding: 10px;
+	}
+
 	#home-featuring #button {
 		margin-bottom: 60px;
 		padding: 10px;
